--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,10 @@
 *.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+#*.dll
+#*.so
+#*.so.*
+#*.dylib
 
 # Executables
 *.exe
@@ -55,6 +55,8 @@ dkms.conf
 *.diff
 *.DS_Store
 out/
+libs/
+obj/
 
 CMakeCache.txt
 CMakeFiles
