--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "thirdparty/msgutils"]
-	path = thirdparty/msgutils
-	url = https://github.com/sepnic/msgutils
+[submodule "thirdparty/sysutils"]
+	path = thirdparty/sysutils
+	url = https://github.com/sepnic/sysutils.git
 [submodule "example/liteplayer_android"]
 	path = example/liteplayer_android
 	url = https://github.com/sepnic/liteplayer_android.git
