Rename demo name

--- a/example/basic_demo/CMakeLists.txt
+++ b/example/basic_demo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(liteplayer_demo)
+project(basic_demo)
 
 MESSAGE(STATUS "Platform: ${CMAKE_SYSTEM_NAME}")
 if (CMAKE_SYSTEM_NAME MATCHES "Linux")
@@ -8,21 +8,54 @@ if (CMAKE_SYSTEM_NAME MATCHES "Linux")
 endif()
 
 set(TOP_DIR "${CMAKE_SOURCE_DIR}/../..")
-set(LIB_DIR "${TOP_DIR}/builds/out/libliteplayercore")
 
-# cflags: compile paramters
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -Wall -Werror")
+# cflags: OS_LINUX, OS_ANDROID, OS_APPLE, OS_RTOS
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DOS_APPLE")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -Wall -Werror -Wno-error=unused-function")
+# cflag: if enable aac sbr
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DAAC_ENABLE_SBR")
+# cflag: libspeexdsp: FIXED_POINT/FLOATING_POINT, USE_NEON/USE_SSE
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLOATING_POINT -DUSE_SSE")
 # cflags: if socketlen_t defined
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_SOCKLEN_T")
 
 # include files
 include_directories(${TOP_DIR}/thirdparty/sysutils/include)
+include_directories(${TOP_DIR}/thirdparty/codecs)
 include_directories(${TOP_DIR}/library/include)
+include_directories(${TOP_DIR}/library/source)
 include_directories(${TOP_DIR}/adapter/external/httpclient)
 include_directories(${TOP_DIR}/adapter/external/mbedtls/include)
 include_directories(${TOP_DIR}/adapter)
 
+# include files
+include_directories(${TOP_DIR}/thirdparty/codecs/mp3-pvmp3/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/mp3-pvmp3/src)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libAACdec/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libPCMutils/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libFDK/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libSYS/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libMpegTPDec/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libSBRdec/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libArithCoding/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libDRCdec/include)
+include_directories(${TOP_DIR}/thirdparty/codecs/aac-fdk/libSACdec/include)
+
 # source files
+file(GLOB THIRDPARTY_SRC src
+    ${TOP_DIR}/thirdparty/sysutils/source/cutils/*.c
+    ${TOP_DIR}/thirdparty/sysutils/osal/unix/*.c
+    ${TOP_DIR}/thirdparty/codecs/mp3-pvmp3/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libAACdec/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libPCMutils/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libFDK/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libSYS/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libMpegTPDec/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libSBRdec/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libArithCoding/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libDRCdec/src/*.cpp
+    ${TOP_DIR}/thirdparty/codecs/aac-fdk/libSACdec/src/*.cpp
+)
 set (ADAPTER_SRC
     ${TOP_DIR}/adapter/external/httpclient/httpclient.c
     ${TOP_DIR}/adapter/external/mbedtls/library/aes.c
@@ -110,17 +143,41 @@ set (ADAPTER_SRC
 )
 
 if (ENABLE_LINUX_ALSA)
+    # Force SRC to 48KHz/Stereo for tinyalsa device
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_LINUX_ALSA")
     list(APPEND ADAPTER_SRC
         ${TOP_DIR}/adapter/alsa_wrapper.c
     )
 endif()
 
-LINK_DIRECTORIES(${LIB_DIR})
+# source files
+set (LITEPLAYER_SRC
+    ${TOP_DIR}/library/source/esp_adf/audio_element.c
+    ${TOP_DIR}/library/source/esp_adf/audio_event_iface.c
+    ${TOP_DIR}/library/source/esp_adf/audio_pipeline.c
+    ${TOP_DIR}/library/source/audio_decoder/mp3_pvmp3_wrapper.c
+    ${TOP_DIR}/library/source/audio_decoder/mp3_decoder.c
+    ${TOP_DIR}/library/source/audio_decoder/aac_fdk_wrapper.c
+    ${TOP_DIR}/library/source/audio_decoder/aac_decoder.c
+    ${TOP_DIR}/library/source/audio_decoder/m4a_decoder.c
+    ${TOP_DIR}/library/source/audio_decoder/wav_decoder.c
+    ${TOP_DIR}/library/source/audio_extractor/mp3_extractor.c
+    ${TOP_DIR}/library/source/audio_extractor/aac_extractor.c
+    ${TOP_DIR}/library/source/audio_extractor/m4a_extractor.c
+    ${TOP_DIR}/library/source/audio_extractor/wav_extractor.c
+    ${TOP_DIR}/library/source/audio_resampler/audio_resampler.c
+    ${TOP_DIR}/library/source/audio_resampler/speexdsp/resample.c
+    ${TOP_DIR}/library/source/audio_stream/sink_stream.c
+    ${TOP_DIR}/library/source/liteplayer_source.c
+    ${TOP_DIR}/library/source/liteplayer_parser.c
+    ${TOP_DIR}/library/source/liteplayer_debug.c
+    ${TOP_DIR}/library/source/liteplayer_main.c
+    ${TOP_DIR}/library/source/liteplayer_manager.c
+)
 
-# liteplayer_mngr
-add_executable(liteplayer_mngr liteplayer_mngr.c ${ADAPTER_SRC})
-target_link_libraries(liteplayer_mngr liteplayer_core_s.a pthread)
+# basic_demo
+add_executable(basic_demo basic_demo.c ${THIRDPARTY_SRC} ${LITEPLAYER_SRC} ${ADAPTER_SRC})
+target_link_libraries(basic_demo pthread)
 if (ENABLE_LINUX_ALSA)
-target_link_libraries(liteplayer_mngr asound)
+target_link_libraries(basic_demo asound)
 endif()
