Only support S16LE for rate convert, only support mono_to_stereo or stereo_to_mono for channel convert
Note: don't enable S24LE/S32LE support if resampler is needed

--- a/example/basic_demo/CMakeLists.txt
+++ b/example/basic_demo/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFLOATING_POINT -DUSE_SSE")
 # cflags: if socketlen_t defined
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_SOCKLEN_T")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_HTTPCLIENT_MBEDTLS")
-# cflags: if support 24bits or 32bits
+# cflags: support S24LE or S32LE? don't enable it if ENABLE_SRC
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_PCM_S24LE_S32LE_SUPPORT")
 
 # include files
