Resampler as public api

--- a/example/basic_demo/CMakeLists.txt
+++ b/example/basic_demo/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENABLE_DECODER_AAC_SBR")
 # include files
 include_directories(${TOP_DIR}/thirdparty/sysutils/include)
 include_directories(${TOP_DIR}/thirdparty/codecs)
+include_directories(${TOP_DIR}/thirdparty/speexdsp)
 include_directories(${TOP_DIR}/library/include)
 include_directories(${TOP_DIR}/library/source)
 include_directories(${TOP_DIR}/adapter/external/mbedtls/include)
@@ -59,6 +60,7 @@ file(GLOB THIRDPARTY_SRC src
     ${TOP_DIR}/thirdparty/codecs/aac-fdk/libArithCoding/src/*.cpp
     ${TOP_DIR}/thirdparty/codecs/aac-fdk/libDRCdec/src/*.cpp
     ${TOP_DIR}/thirdparty/codecs/aac-fdk/libSACdec/src/*.cpp
+    ${TOP_DIR}/thirdparty/speexdsp/resample.c
 )
 set (ADAPTER_SRC
     ${TOP_DIR}/adapter/external/mbedtls/library/aes.c
@@ -168,14 +170,13 @@ set (LITEPLAYER_SRC
     ${TOP_DIR}/library/source/audio_extractor/aac_extractor.c
     ${TOP_DIR}/library/source/audio_extractor/m4a_extractor.c
     ${TOP_DIR}/library/source/audio_extractor/wav_extractor.c
-    ${TOP_DIR}/library/source/audio_resampler/audio_resampler.c
-    ${TOP_DIR}/library/source/audio_resampler/speexdsp/resample.c
     ${TOP_DIR}/library/source/audio_stream/sink_stream.c
     ${TOP_DIR}/library/source/liteplayer_source.c
     ${TOP_DIR}/library/source/liteplayer_parser.c
     ${TOP_DIR}/library/source/liteplayer_debug.c
     ${TOP_DIR}/library/source/liteplayer_main.c
     ${TOP_DIR}/library/source/liteplayer_manager.c
+    ${TOP_DIR}/library/source/liteplayer_resampler.c
 )
 
 # basic_demo
