--- a/example/playlist_demo/CMakeLists.txt
+++ b/example/playlist_demo/CMakeLists.txt
@@ -122,7 +122,7 @@ LINK_DIRECTORIES(${LIB_DIR})
 
 # playlist_demo
 add_executable(playlist_demo playlist_demo.c ${ADAPTER_SRC})
-target_link_libraries(playlist_demo liteplayer_core_s.a sysutils_s.a pthread)
+target_link_libraries(playlist_demo liteplayer_core_s.a sysutils_s.a pthread m)
 if (ENABLE_LINUX_ALSA)
 target_link_libraries(playlist_demo asound)
 endif()
