ESP8266 demo works
Because esp8266 has very small ram, we need to modify following code:
1. http source uses sync mode, see liteplayer_demo.c
    struct source_wrapper http_ops = {
        .async_mode = false,
        .buffer_size = 2*1024,
2. reduce stack size of decoder task, see liteplayer_config.h
\#define DEFAULT_MEDIA_DECODER_TASK_STACKSIZE     ( 1024*4 )
3. play http url instead of https url

I think we have to add psram to esp8266 for better performance

--- a/builds/esp8266/components/liteplayer_core/CMakeLists.txt
+++ b/builds/esp8266/components/liteplayer_core/CMakeLists.txt
@@ -12,13 +12,15 @@ set(COMPONENT_ADD_INCLUDEDIRS
 set (COMPONENT_PRIV_INCLUDEDIRS
     ${THIRDPARTY_DIR}/sysutils/include
     ${THIRDPARTY_DIR}/codecs
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/include
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src
     ${LITEPLAYER_DIR}/source
 )
 
 set(COMPONENT_SRCS
     ${LITEPLAYER_DIR}/source/esp_adf/audio_element.c
     ${LITEPLAYER_DIR}/source/esp_adf/audio_event_iface.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/mp3_mad_wrapper.c
+    ${LITEPLAYER_DIR}/source/audio_decoder/mp3_pvmp3_wrapper.c
     ${LITEPLAYER_DIR}/source/audio_decoder/mp3_decoder.c
     ${LITEPLAYER_DIR}/source/audio_decoder/aac_helix_wrapper.c
     ${LITEPLAYER_DIR}/source/audio_decoder/aac_decoder.c
@@ -35,17 +37,35 @@ set(COMPONENT_SRCS
     ${LITEPLAYER_DIR}/source/liteplayer_main.c
     ${LITEPLAYER_DIR}/source/liteplayer_listplayer.c
     ${LITEPLAYER_DIR}/source/liteplayer_ttsplayer.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/bit.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/decoder.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/fixed.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/frame.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/huffman.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/layer12.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/layer3.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/stream.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/synth.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/timer.c
-    ${THIRDPARTY_DIR}/codecs/mp3-mad/version.c
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_alias_reduction.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_huffman_parsing.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_crc.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_imdct_synth.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_dct_16.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_mdct_18.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_dct_6.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_mdct_6.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_dct_9.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_mpeg2_get_scale_data.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_decode_header.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_mpeg2_get_scale_factors.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_decode_huff_cw.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_mpeg2_stereo_proc.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_dequantize_sample.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_normalize.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_equalizer.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_poly_phase_synthesis.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_framedecoder.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_polyphase_filter_window.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_get_main_data_size.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_reorder.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_get_scale_factors.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_seek_synch.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_get_side_info.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_stereo_proc.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_getbits.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_tables.cpp
+    ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src/pvmp3_huffman_decoding.cpp
     ${THIRDPARTY_DIR}/codecs/aac-helix/aacdec.c
     ${THIRDPARTY_DIR}/codecs/aac-helix/aactabs.c
     ${THIRDPARTY_DIR}/codecs/aac-helix/bitstream.c
@@ -78,4 +98,4 @@ set(COMPONENT_SRCS
 
 register_component()
 
-target_compile_options(${COMPONENT_LIB} PRIVATE -DOS_RTOS -DOS_FREERTOS_ESP8266 -DARDUINO -DCONFIG_MAD_FPM_DEFAULT -DCONFIG_SINK_FIXED_S16LE)
+target_compile_options(${COMPONENT_LIB} PRIVATE -DOS_RTOS -DOS_FREERTOS_ESP8266 -DARDUINO -DCONFIG_SINK_FIXED_S16LE)
