--- a/builds/esp32/components/liteplayer_adapter/CMakeLists.txt
+++ b/builds/esp32/components/liteplayer_adapter/CMakeLists.txt
@@ -4,7 +4,7 @@ set(THIRDPARTY_DIR ${TOP_DIR}/thirdparty)
 set(ADAPTER_DIR ${TOP_DIR}/adapter)
 
 set(COMPONENT_REQUIRES)
-set(COMPONENT_PRIV_REQUIRES sysutils esp8266)
+set(COMPONENT_PRIV_REQUIRES sysutils driver esp_peripherals)
 
 set(COMPONENT_ADD_INCLUDEDIRS
     ${ADAPTER_DIR}
@@ -18,7 +18,7 @@ set (COMPONENT_PRIV_INCLUDEDIRS
 
 set(COMPONENT_SRCS
     ${ADAPTER_DIR}/source_httpclient_wrapper.c
-    sink_esp8266_i2s_wrapper.c
+    sink_ESP32-LyraT-Mini_wrapper.c
 )
 
 register_component()
