Add es7243 adc driver that was not verified yet

--- a/builds/esp32/components/esp_peripherals/CMakeLists.txt
+++ b/builds/esp32/components/esp_peripherals/CMakeLists.txt
@@ -13,8 +13,8 @@ set (COMPONENT_PRIV_INCLUDEDIRS
 set(COMPONENT_SRCS
     ./i2c_bus/i2c_bus.c
     ./audio_codec/audio_hal.c
+    ./audio_codec/driver/es7243/es7243.c
     ./audio_codec/driver/es8311/es8311.c
- #   ./audio_codec/driver/es7243/es7243.c
 )
 
 register_component()
