--- a/builds/esp32/main/CMakeLists.txt
+++ b/builds/esp32/main/CMakeLists.txt
@@ -1,3 +1,4 @@
-idf_component_register(SRCS "liteplayer_demo.c"
-                       INCLUDE_DIRS ""
-)
+set(COMPONENT_SRCS ./liteplayer_demo.c)
+set(COMPONENT_ADD_INCLUDEDIRS "")
+
+register_component()
