--- a/builds/esp32/components/liteplayer_core/CMakeLists.txt
+++ b/builds/esp32/components/liteplayer_core/CMakeLists.txt
@@ -98,4 +98,4 @@ set(COMPONENT_SRCS
 
 register_component()
 
-target_compile_options(${COMPONENT_LIB} PRIVATE -DOS_RTOS -DOS_FREERTOS_ESP8266 -DARDUINO -DCONFIG_SINK_FIXED_S16LE)
+target_compile_options(${COMPONENT_TARGET} PRIVATE -DOS_RTOS -DOS_FREERTOS_ESP8266 -DARDUINO -DCONFIG_SINK_FIXED_S16LE)
