--- a/builds/esp32/Makefile
+++ b/builds/esp32/Makefile
@@ -5,6 +5,4 @@
 
 PROJECT_NAME := liteplayer
 
-EXTRA_COMPONENT_DIRS = $(IDF_PATH)/examples/common_components/protocol_examples_common
-
-include $(IDF_PATH)/make/project.mk
+include $(ADF_PATH)/make/project.mk
